--- a/ready-html/index.html
+++ b/ready-html/index.html
@@ -26,7 +26,7 @@
 				<div class="layers">
 					<div class="layer__header">
 						<div class="layers__caption">Welcome to Parallax</div>
-						<div class="layers__title">Fairy Forestо</div>
+						<div class="layers__title">Fairy Forest</div>
 					</div>
 					<div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
 					<div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
